# math-rs

./: Cargo.toml  README.md
src/: angle.rs  bezier.rs  func.rs  lib.rs  tests.rs  vec2d.rs
src/vec2d/: algebra.rs  bezier.rs  convert.rs  intersect.rs  trigonometry.rs
